<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    android:adjustViewBounds="true"
    android:background="@drawable/grass_field"
    android:scaleType="centerCrop"
    tools:context="com.example.android.footballscoresapp.MainActivity">

    <TextView
        android:id="@+id/score_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/score"
        android:textColor="#EEE"
        android:textSize="55sp" />

    <LinearLayout
        android:id="@+id/score_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_text"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/default_score"
            android:textAlignment="center"
            android:textColor="#EEE"
            android:textSize="80sp" />

        <View
            android:layout_width="24dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="0"
            android:background="#EEE" />

        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/default_score"
            android:textAlignment="center"
            android:textColor="#EEE"
            android:textSize="80sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_wrapper"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:text="@string/team_foulers"
                android:textColor="#EEE"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_foul_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:text="@string/fouls_0"
                android:textColor="#EEE" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:onClick="teamAGoal"
                android:text="@string/goal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:onClick="teamAFoul"
                android:text="@string/foul" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="#FFF" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:text="@string/team_goalers"
                android:textColor="#EEE"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_foul_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:text="@string/fouls_0"
                android:textColor="#EEE" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:onClick="teamBGoal"
                android:text="@string/goal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:onClick="teamBFoul"
                android:text="@string/foul" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="resetGame"
        android:text="@string/reset" />

</RelativeLayout>